force-app/main/default/objects/R360_Audit_Event__c/R360_Audit_Event__c.object-meta.xml
<CustomObject>
    <description>Attributable Resource 360 business event with correlation and entity lineage.</description>
    <label>Resource 360 Audit Event</label>
    <nameField>
        <displayFormat>AUD-{00000}</displayFormat>
        <label>Audit Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource 360 Audit Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>