force-app/main/default/objects/R360_Audit_Event__c/fields/Active_Role__c.field-meta.xml
<CustomField>
    <fullName>Active_Role__c</fullName>
    <label>Active Business Role</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>