force-app/main/default/objects/R360_Audit_Event__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resource 360 Audit Events</relationshipLabel>
    <relationshipName>Resource360_Audit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>