force-app/main/default/objects/R360_Audit_Event__c/fields/After_JSON__c.field-meta.xml
<CustomField><fullName>After_JSON__c</fullName><description>Minimized allowlisted after-state. Secrets and sensitive evidence are prohibited.</description><label>After State</label><length>8000</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>