force-app/main/default/objects/R360_Audit_Event__c/fields/Before_JSON__c.field-meta.xml
<CustomField><fullName>Before_JSON__c</fullName><description>Minimized allowlisted before-state. Secrets and sensitive evidence are prohibited.</description><label>Before State</label><length>8000</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>