force-app/main/default/objects/R360_Audit_Event__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Redacted Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>