force-app/main/default/objects/R360_Audit_Event__c/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <label>Entity ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>