force-app/main/default/objects/R360_Audit_Event__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>