force-app/main/default/objects/R360_Audit_Event__c/fields/Entity_Version__c.field-meta.xml
<CustomField>
    <fullName>Entity_Version__c</fullName>
    <label>Entity Version</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>