force-app/main/default/objects/R360_Audit_Event__c/fields/Reason_Code__c.field-meta.xml
<CustomField><fullName>Reason_Code__c</fullName><label>Reason Code</label><length>80</length><type>Text</type></CustomField>